Ajout de route API

--- a/.env.exemple
+++ b/.env.exemple
@@ -12,10 +12,12 @@ MYSQL_LOG_DIR=./.docker/db/logs
 # Node Vars
 HOST_MACHINE_UNSECURE_HOST_PORT=80
 HOST_MACHINE_SECURE_HOST_PORT=443
+SERVER_ADDRESS=0.0.0.0
+SERVER_PORT=8000
 
 # MySQL Vars
-HOST_MACHINE_MYSQL_PORT=3306
-MYSQL_ROOT_PASSWORD=root
-MYSQL_USER=admin
-MYSQL_PASSWORD=admin
-MYSQL_DATABASE=cms
+HOST_MACHINE_MYSQL_PORT=port_number
+MYSQL_ROOT_PASSWORD=mysql_root_password
+MYSQL_USER=mysql_user_password
+MYSQL_PASSWORD=mysql_password
+MYSQL_DATABASE=mysql_db_name
