--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./:/usr/src/app
     ports:
-      - "8000:8000"
+      - ${SERVER_PORT}:${SERVER_PORT}
 
   mysql:
     image: mysql:5.7
@@ -19,10 +19,13 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "${HOST_MACHINE_MYSQL_PORT}:3306"
+      - ${HOST_MACHINE_MYSQL_PORT}:3306
+    command: --default-authentication-plugin=mysql_native_password
     volumes:
       - ${MYSQL_DATA_DIR-./.docker/db/data}:/var/lib/mysql
       - ${MYSQL_LOG_DIR-./.docker/db/logs}:/var/log/mysql
+      - ./scripts/schema.sql:/docker-entrypoint-initdb.d/1.sql
+      - ./scripts/data.sql:/docker-entrypoint-initdb.d/2.sql
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
