--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/ejs": "^3.0.7",
+    "@types/mysql2": "github:types/mysql2",
     "@types/node": "^16.3.3",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.12",
@@ -22,6 +23,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.6",
+    "mysql2": "^2.2.5"
   }
 }
