Ajout controller user + articles + class Utils

--- a/.env.exemple
+++ b/.env.exemple
@@ -18,6 +18,7 @@ SERVER_PORT=8000
 # MySQL Vars
 HOST_MACHINE_MYSQL_PORT=port_number
 MYSQL_ROOT_PASSWORD=mysql_root_password
+MYSQL_ROOT_HOST=%
 MYSQL_USER=mysql_user_password
 MYSQL_PASSWORD=mysql_password
 MYSQL_DATABASE=mysql_db_name
