--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_ROOT_HOST: ${DOCKER_MACHINE_MYSQL_ADDRESS}
+      MYSQL_ROOT_HOST: ${MYSQL_ROOT_HOST}
 
   node:
     depends_on: 
